<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_add_medicine"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add_medicine" />
        <item
            android:id="@+id/nav_medicine_list"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/medicine_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>